# Chess

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Utility.h  board.txt  board2.txt  main.cpp
